Optimized pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,15 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20210307</version>
+			<scope>compile</scope>
+			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>7.4.0</version>
 			<scope>test</scope>
+			<type>jar</type>
 		</dependency>
 	</dependencies>		
 	<build>
@@ -128,6 +131,12 @@
 					<show>private</show>
 				</configuration>				
 			</plugin>			
+			<plugin>
+				<!-- https://maven.apache.org/plugins/maven-install-plugin/ -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>3.0.0-M1</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
