--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: '14'
+          distribution: 'adopt'
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
