--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,9 @@
 					<trimStackTrace>false</trimStackTrace> 
 					<argLine>--add-modules de.sft.base -Dfile.encoding=UTF-8</argLine>
 					<workingDirectory>${project.basedir}/data/</workingDirectory>
+					<!--parallel>methods</parallel>
+					<threadCount>8</threadCount>
+					<dataproviderthreadcount>8</dataproviderthreadcount -->
 				</configuration>
 			</plugin>		
 			<plugin>
